<resources>
    <string name="app_name">Speed</string>

    <!--main-->
    <string name="main_home">主页</string>
    <string name="main_live">直播</string>
    <string name="main_find">发现</string>
    <string name="main_mine">我的</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <!--base_  app-adapter -->
    <string name="no_found_network">无网络连接</string>
    <string name="loading">正在加载...</string>
    <string name="loadFail">加载不出数据</string>
    <string name="loadFail_net">网络不给力</string>
    <string name="loadFail_reload">点击屏幕重试</string>
    <string name="no_data">啥都没有</string>
    <string name="load_all_finish">全部加载完毕</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!--activity xml-->
    <string name="setSelectPath">选择存储路径</string>
    <string name="setDownloadSet">下载设置</string>
    <string name="setCommon">通用</string>
    <string name="setCheckSpeed">网速检测</string>
    <string name="setPhoneSpaceSize">手机存储可用空间</string>
    <string name="setClearSpace">清理存储空间</string>
    <string name="setUpdate">检测更新</string>
    <string name="setAboutSpeed">关于[speed]0.0.1</string>
    <string name="setQuiteLogin">退出登录</string>
    <string name="setServiceHttp">设置服务端地址</string>


    <!--calendar 日历-->
    <string name="xingqi1">一</string>
    <string name="xingqi2">二</string>
    <string name="xingqi3">三</string>
    <string name="xingqi4">四</string>
    <string name="xingqi5">五</string>
    <string name="xingqi6">六</string>
    <string name="xingqi7">日</string>
</resources>
